change HW module-8 n2

--- a/module-8/gallery.html
+++ b/module-8/gallery.html
@@ -21,21 +21,23 @@
             <a href="index.html">HOME</a>
           </li>
           <li class="menu-item">
-            <a href="#">ABOUT</a>
-            <ul class="submenu">
-              <li class="submenu">
-                <a href="#">AGENCY</a>
-              </li>
-              <li class="submenu">
-                <a href="#">NEWS</a>
-              </li>
-              <li class="submenu">
-                <a href="#">TEAM</a>
-              </li>
-            </ul>
+            <div>
+              <a href="#">ABOUT</a>
+              <ul class="submenu">
+                <li class="submenu">
+                  <a href="#">AGENCY</a>
+                </li>
+                <li class="submenu">
+                  <a href="#">NEWS</a>
+                </li>
+                <li class="submenu">
+                  <a href="#">TEAM</a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="menu-item">
-            <a href="#">GALLERY</a>
+            <a href="gallery.html">GALLERY</a>
           </li>
           <li class="logo">
             <h1>JOURNEY</h1>
@@ -52,6 +54,47 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="content">
+        <h2>OUR GALLERY</h2>
+        <div class="gallery">
+          <img src="img/gallery-image-1-1x.jpg" srcset="img/gallery-image-1-1x.jpg 1x, img/gallery-image-1-2x.jpg 2x" alt="gallery-image-1">
+          <img src="img/gallery-image-2-1x.jpg" srcset="img/gallery-image-2-1x.jpg 1x, img/gallery-image-2-2x.jpg 2x" alt="gallery-image-2">
+          <img src="img/gallery-image-3-1x.jpg" srcset="img/gallery-image-3-1x.jpg 1x, img/gallery-image-3-2x.jpg 2x" alt="gallery-image-3">
+          <img src="img/gallery-image-4-1x.jpg" srcset="img/gallery-image-4-1x.jpg 1x, img/gallery-image-4-2x.jpg 2x" alt="gallery-image-4">
+          <img src="img/gallery-image-5-1x.jpg" srcset="img/gallery-image-5-1x.jpg 1x, img/gallery-image-5-2x.jpg 2x" alt="gallery-image-5">
+          <img src="img/gallery-image-6-1x.jpg" srcset="img/gallery-image-6-1x.jpg 1x, img/gallery-image-6-2x.jpg 2x" alt="gallery-image-6">
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="list">
+        <div class="nav">
+          <a href="#">FAQS PAGE</a>
+          <a href="#">PEOPLE SAY</a>
+        </div>
+        <div class="nav">
+          <a href="#">USERFUL LINKS</a>
+          <a href="#">PARTNERS</a>
+        </div>
+        <div class="nav">
+          <a href="#">INSURANCE</a>
+          <a href="#">FAMILY TRAVEL</a>
+        </div>
+        <div class="nav contacts">
+          <span href="#">CONTACT US&#58;</span>
+          <a href="tel: 1-800-234-5678">tel&#58; 1-800-234-5678</a>
+          <a href="#">info@demolink.org</a>
+        </div>
+      </div>
+      <div class="social">
+        <a href="https://twitter.com/" class="twitter" target="_blank"></a>
+        <a href="https://www.facebook.com/" class="facebook" target="_blank"></a>
+        <a href="https://plus.google.com/" class="google-plus" target="_blank"></a>
+        <a href="https://www.instagram.com/" class="instagram" target="_blank"></a>
+        <p>Journey &copy; 2013 | Privacy Policy | Website designed by TemplateMonster.com</p>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
