change HW module-8 n3

--- a/module-8/gallery.html
+++ b/module-8/gallery.html
@@ -58,12 +58,24 @@
       <div class="content">
         <h2>OUR GALLERY</h2>
         <div class="gallery">
-          <img src="img/gallery-image-1-1x.jpg" srcset="img/gallery-image-1-1x.jpg 1x, img/gallery-image-1-2x.jpg 2x" alt="gallery-image-1">
-          <img src="img/gallery-image-2-1x.jpg" srcset="img/gallery-image-2-1x.jpg 1x, img/gallery-image-2-2x.jpg 2x" alt="gallery-image-2">
-          <img src="img/gallery-image-3-1x.jpg" srcset="img/gallery-image-3-1x.jpg 1x, img/gallery-image-3-2x.jpg 2x" alt="gallery-image-3">
-          <img src="img/gallery-image-4-1x.jpg" srcset="img/gallery-image-4-1x.jpg 1x, img/gallery-image-4-2x.jpg 2x" alt="gallery-image-4">
-          <img src="img/gallery-image-5-1x.jpg" srcset="img/gallery-image-5-1x.jpg 1x, img/gallery-image-5-2x.jpg 2x" alt="gallery-image-5">
-          <img src="img/gallery-image-6-1x.jpg" srcset="img/gallery-image-6-1x.jpg 1x, img/gallery-image-6-2x.jpg 2x" alt="gallery-image-6">
+          <div class="gallery-item">
+            <img src="img/gallery-image-1-1x.jpg" srcset="img/gallery-image-1-1x.jpg 1x, img/gallery-image-1-2x.jpg 2x" alt="gallery-image-1">
+          </div>
+          <div class="gallery-item">
+            <img src="img/gallery-image-2-1x.jpg" srcset="img/gallery-image-2-1x.jpg 1x, img/gallery-image-2-2x.jpg 2x" alt="gallery-image-2">
+          </div>
+          <div class="gallery-item">
+            <img src="img/gallery-image-3-1x.jpg" srcset="img/gallery-image-3-1x.jpg 1x, img/gallery-image-3-2x.jpg 2x" alt="gallery-image-3">
+          </div>
+          <div class="gallery-item">
+            <img src="img/gallery-image-4-1x.jpg" srcset="img/gallery-image-4-1x.jpg 1x, img/gallery-image-4-2x.jpg 2x" alt="gallery-image-4">
+          </div>
+          <div class="gallery-item">
+            <img src="img/gallery-image-5-1x.jpg" srcset="img/gallery-image-5-1x.jpg 1x, img/gallery-image-5-2x.jpg 2x" alt="gallery-image-5">
+          </div>
+          <div class="gallery-item">
+            <img src="img/gallery-image-6-1x.jpg" srcset="img/gallery-image-6-1x.jpg 1x, img/gallery-image-6-2x.jpg 2x" alt="gallery-image-6">
+          </div>
         </div>
       </div>
     </main>
@@ -82,9 +94,9 @@
           <a href="#">FAMILY TRAVEL</a>
         </div>
         <div class="nav contacts">
-          <span href="#">CONTACT US&#58;</span>
-          <a href="tel: 1-800-234-5678">tel&#58; 1-800-234-5678</a>
-          <a href="#">info@demolink.org</a>
+          <span>CONTACT US&#58;</span>
+          <a href="tel: 1-800-234-5678">1-800-234-5678</a>
+          <a href="#"> info@demolink.org</a>
         </div>
       </div>
       <div class="social">
@@ -98,3 +110,5 @@
   </div>
 </body>
 </html>
+
+<!-- tel&#58;  -->
