--- a/module-8/gallery.html
+++ b/module-8/gallery.html
@@ -76,7 +76,17 @@
           <div class="gallery-item">
             <img src="img/gallery-image-6-1x.jpg" srcset="img/gallery-image-6-1x.jpg 1x, img/gallery-image-6-2x.jpg 2x" alt="gallery-image-6">
           </div>
+          <div class="gallery-item 7">
+            <img src="img/gallery-image-7-1x.jpg" srcset="img/gallery-image-7-1x.jpg 1x, img/gallery-image-7-2x.jpg 2x" alt="gallery-image-7">
+          </div>
+          <div class="gallery-item 8">
+            <img src="img/gallery-image-8-1x.jpg" srcset="img/gallery-image-8-1x.jpg 1x, img/gallery-image-8-2x.jpg 2x" alt="gallery-image-8">
+          </div>
+          <div class="gallery-item 9">
+            <img src="img/gallery-image-9-1x.jpg" srcset="img/gallery-image-9-1x.jpg 1x, img/gallery-image-9-2x.jpg 2x" alt="gallery-image-9">
+          </div>
         </div>
+        <a href="#top" title="To the top"></a>
       </div>
     </main>
     <footer>
@@ -110,5 +120,3 @@
   </div>
 </body>
 </html>
-
-<!-- tel&#58;  -->
