add HW module-8 n2

--- a/module-9/About/about.html
+++ b/module-9/About/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <header>
+    <header> <!--  class="container" -->
       <a name="top"></a>
       <nav>
         <ul class="menu">
@@ -58,8 +58,7 @@
       <div class="part-one">
         <div>
           <h2>AGENCY PROFILE</h2>
-          <img src="" alt="">
-          <img src="" alt="">
+          <img src="img/about-image-1-1x.jpg" srcset="img/about-image-1-1x.jpg 1x, img/about-image-1-2x 2x" alt="Aircraft">
           <h3>
             Lorem ipsum dolor sit amet, elit. Laborum, consectetur adipisicing.
           </h3>
