--- a/module-8/gallery.html
+++ b/module-8/gallery.html
@@ -20,9 +20,9 @@
           <li class="menu-item">
             <a href="index.html">HOME</a>
           </li>
-          <li class="menu-item">
+          <li class="menu-item sub">
+            <a href="#">ABOUT</a>
             <div>
-              <a href="#">ABOUT</a>
               <ul class="submenu">
                 <li class="submenu">
                   <a href="#">AGENCY</a>
@@ -76,13 +76,13 @@
           <div class="gallery-item">
             <img src="img/gallery-image-6-1x.jpg" srcset="img/gallery-image-6-1x.jpg 1x, img/gallery-image-6-2x.jpg 2x" alt="gallery-image-6">
           </div>
-          <div class="gallery-item 7">
+          <div class="gallery-item">
             <img src="img/gallery-image-7-1x.jpg" srcset="img/gallery-image-7-1x.jpg 1x, img/gallery-image-7-2x.jpg 2x" alt="gallery-image-7">
           </div>
-          <div class="gallery-item 8">
+          <div class="gallery-item">
             <img src="img/gallery-image-8-1x.jpg" srcset="img/gallery-image-8-1x.jpg 1x, img/gallery-image-8-2x.jpg 2x" alt="gallery-image-8">
           </div>
-          <div class="gallery-item 9">
+          <div class="gallery-item">
             <img src="img/gallery-image-9-1x.jpg" srcset="img/gallery-image-9-1x.jpg 1x, img/gallery-image-9-2x.jpg 2x" alt="gallery-image-9">
           </div>
         </div>
