change HW module-9 n1

--- a/module-9/Gallery/gallery.html
+++ b/module-9/Gallery/gallery.html
@@ -12,11 +12,11 @@
   <title>Gallery</title>
 </head>
 <body>
-  <div class="wrapper">
+  <div class="container">
     <header>
       <a name="top"></a>
-      <nav>
-        <ul class="menu">
+      <nav class="row justify-content-center">
+        <ul class="menu col-10">
           <li class="menu-item">
             <a href="index.html">HOME</a>
           </li>
