--- a/module-9/Gallery/gallery.html
+++ b/module-9/Gallery/gallery.html
@@ -20,7 +20,7 @@
           <li class="menu-item">
             <a href="index.html">HOME</a>
           </li>
-          <li class="menu-item">
+          <li class="menu-item sub">
             <div>
               <a href="about.html">ABOUT</a>
               <ul class="submenu">
@@ -54,7 +54,41 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="content">
+        <h2>OUR GALLERY</h2>
+        <div class="gallery row">
+          <div class="gallery-item col-12">
+            <img src="img/gallery-image-1-1x.jpg" srcset="img/gallery-image-1-1x.jpg 1x, img/gallery-image-1-2x.jpg 2x" alt="gallery-image-1">
+          </div>
+          <div class="gallery-item col-12">
+            <img src="img/gallery-image-2-1x.jpg" srcset="img/gallery-image-2-1x.jpg 1x, img/gallery-image-2-2x.jpg 2x" alt="gallery-image-2">
+          </div>
+          <div class="gallery-item col-12">
+            <img src="img/gallery-image-3-1x.jpg" srcset="img/gallery-image-3-1x.jpg 1x, img/gallery-image-3-2x.jpg 2x" alt="gallery-image-3">
+          </div>
+          <div class="gallery-item col-12">
+            <img src="img/gallery-image-4-1x.jpg" srcset="img/gallery-image-4-1x.jpg 1x, img/gallery-image-4-2x.jpg 2x" alt="gallery-image-4">
+          </div>
+          <div class="gallery-item col-12">
+            <img src="img/gallery-image-5-1x.jpg" srcset="img/gallery-image-5-1x.jpg 1x, img/gallery-image-5-2x.jpg 2x" alt="gallery-image-5">
+          </div>
+          <div class="gallery-item col-12">
+            <img src="img/gallery-image-6-1x.jpg" srcset="img/gallery-image-6-1x.jpg 1x, img/gallery-image-6-2x.jpg 2x" alt="gallery-image-6">
+          </div>
+          <div class="gallery-item col-12">
+            <img src="img/gallery-image-7-1x.jpg" srcset="img/gallery-image-7-1x.jpg 1x, img/gallery-image-7-2x.jpg 2x" alt="gallery-image-7">
+          </div>
+          <div class="gallery-item col-12">
+            <img src="img/gallery-image-8-1x.jpg" srcset="img/gallery-image-8-1x.jpg 1x, img/gallery-image-8-2x.jpg 2x" alt="gallery-image-8">
+          </div>
+          <div class="gallery-item col-12">
+            <img src="img/gallery-image-9-1x.jpg" srcset="img/gallery-image-9-1x.jpg 1x, img/gallery-image-9-2x.jpg 2x" alt="gallery-image-9">
+          </div>
+        </div>
+        <a href="#top" title="To the top"></a>
+      </div>
+    </main>
     <footer>
       <div class="list">
         <div class="nav">
