change HW module-9 n4

--- a/module-9/Gallery/gallery.html
+++ b/module-9/Gallery/gallery.html
@@ -13,110 +13,131 @@
 </head>
 <body>
   <div class="container">
-    <header>
-      <a name="top"></a>
-      <nav class="row justify-content-center">
-        <ul class="menu col-10 col-md-6">
-          <li class="menu-item">
-            <a href="index.html">HOME</a>
-          </li>
-          <li class="menu-item sub">
-            <div>
-              <a href="about.html">ABOUT</a>
-              <ul class="submenu">
-                <li class="submenu">
-                  <a href="#">AGENCY</a>
-                </li>
-                <li class="submenu">
-                  <a href="#">NEWS</a>
-                </li>
-                <li class="submenu">
-                  <a href="#">TEAM</a>
-                </li>
-              </ul>
+    <div class="wrapper">
+      <header>
+        <nav class="row">
+          <ul class="menu col-10 offset-1 col-md-8 offset-md-2 col-lg-12">
+            <li class="menu-item">
+              <a href="index.html">HOME</a>
+            </li>
+            <li class="menu-item sub">
+              <div>
+                <a href="#">ABOUT</a>
+                <ul class="submenu">
+                  <li class="submenu">
+                    <a href="#">AGENCY</a>
+                  </li>
+                  <li class="submenu">
+                    <a href="#">NEWS</a>
+                  </li>
+                  <li class="submenu">
+                    <a href="#">TEAM</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="menu-item">
+              <a href="gallery.html">GALLERY</a>
+            </li>
+            <li class="logo">
+              <h1>JOURNEY</h1>
+            </li>
+            <li class="menu-item">
+              <a href="tours.html">TOURS</a>
+            </li>
+            <li class="menu-item">
+              <a href="#">BLOG</a>
+            </li>
+            <li class="menu-item">
+              <a href="contacts.html">CONTACTS</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <div class="content">
+          <h2>OUR GALLERY</h2>
+          <div class="gallery row">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="gallery-item">
+                <img src="img/gallery-image-1-1x.jpg" srcset="img/gallery-image-1-1x.jpg 1x, img/gallery-image-1-2x.jpg 2x" alt="gallery-image-1">
+              </div>
             </div>
-          </li>
-          <li class="menu-item">
-            <a href="gallery.html">GALLERY</a>
-          </li>
-          <li class="logo">
-            <h1>JOURNEY</h1>
-          </li>
-          <li class="menu-item">
-            <a href="tours.html">TOURS</a>
-          </li>
-          <li class="menu-item">
-            <a href="#">BLOG</a>
-          </li>
-          <li class="menu-item">
-            <a href="contacts.html">CONTACTS</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="container">
-      <div class="content">
-        <h2>OUR GALLERY</h2>
-        <div class="gallery row">
-          <div class="gallery-item col-12 col-md-6">
-            <img src="img/gallery-image-1-1x.jpg" srcset="img/gallery-image-1-1x.jpg 1x, img/gallery-image-1-2x.jpg 2x" alt="gallery-image-1">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="gallery-item">
+                <img src="img/gallery-image-2-1x.jpg" srcset="img/gallery-image-2-1x.jpg 1x, img/gallery-image-2-2x.jpg 2x" alt="gallery-image-2">
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="gallery-item">
+                <img src="img/gallery-image-3-1x.jpg" srcset="img/gallery-image-3-1x.jpg 1x, img/gallery-image-3-2x.jpg 2x" alt="gallery-image-3">
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="gallery-item">
+                <img src="img/gallery-image-4-1x.jpg" srcset="img/gallery-image-4-1x.jpg 1x, img/gallery-image-4-2x.jpg 2x" alt="gallery-image-4">
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="gallery-item">
+                <img src="img/gallery-image-5-1x.jpg" srcset="img/gallery-image-5-1x.jpg 1x, img/gallery-image-5-2x.jpg 2x" alt="gallery-image-5">
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="gallery-item">
+                <img src="img/gallery-image-6-1x.jpg" srcset="img/gallery-image-6-1x.jpg 1x, img/gallery-image-6-2x.jpg 2x" alt="gallery-image-6">
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="gallery-item">
+                <img src="img/gallery-image-7-1x.jpg" srcset="img/gallery-image-7-1x.jpg 1x, img/gallery-image-7-2x.jpg 2x" alt="gallery-image-7">
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="gallery-item">
+                <img src="img/gallery-image-8-1x.jpg" srcset="img/gallery-image-8-1x.jpg 1x, img/gallery-image-8-2x.jpg 2x" alt="gallery-image-8">
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="gallery-item">
+                <img src="img/gallery-image-9-1x.jpg" srcset="img/gallery-image-9-1x.jpg 1x, img/gallery-image-9-2x.jpg 2x" alt="gallery-image-9">
+              </div>
+            </div>
           </div>
-          <div class="gallery-item col-12 col-md-6">
-            <img src="img/gallery-image-2-1x.jpg" srcset="img/gallery-image-2-1x.jpg 1x, img/gallery-image-2-2x.jpg 2x" alt="gallery-image-2">
-          </div>
-          <div class="gallery-item col-12 col-md-6">
-            <img src="img/gallery-image-3-1x.jpg" srcset="img/gallery-image-3-1x.jpg 1x, img/gallery-image-3-2x.jpg 2x" alt="gallery-image-3">
-          </div>
-          <div class="gallery-item col-12 col-md-6">
-            <img src="img/gallery-image-4-1x.jpg" srcset="img/gallery-image-4-1x.jpg 1x, img/gallery-image-4-2x.jpg 2x" alt="gallery-image-4">
-          </div>
-          <div class="gallery-item col-12 col-md-6">
-            <img src="img/gallery-image-5-1x.jpg" srcset="img/gallery-image-5-1x.jpg 1x, img/gallery-image-5-2x.jpg 2x" alt="gallery-image-5">
-          </div>
-          <div class="gallery-item col-12 col-md-6">
-            <img src="img/gallery-image-6-1x.jpg" srcset="img/gallery-image-6-1x.jpg 1x, img/gallery-image-6-2x.jpg 2x" alt="gallery-image-6">
-          </div>
-          <div class="gallery-item col-12 col-md-6">
-            <img src="img/gallery-image-7-1x.jpg" srcset="img/gallery-image-7-1x.jpg 1x, img/gallery-image-7-2x.jpg 2x" alt="gallery-image-7">
-          </div>
-          <div class="gallery-item col-12 col-md-6">
-            <img src="img/gallery-image-8-1x.jpg" srcset="img/gallery-image-8-1x.jpg 1x, img/gallery-image-8-2x.jpg 2x" alt="gallery-image-8">
-          </div>
-          <div class="gallery-item col-12 col-md-6">
-            <img src="img/gallery-image-9-1x.jpg" srcset="img/gallery-image-9-1x.jpg 1x, img/gallery-image-9-2x.jpg 2x" alt="gallery-image-9">
+          <a class="to-top" href="#top" title="To the top"></a>
+        </div>
+      </main>
+      <footer class="container">
+        <div class="row footer">
+          <div class="list col-12 col-md-10 offset-md-1">
+            <div class="nav">
+              <a href="#">FAQS PAGE</a>
+              <a href="#">PEOPLE SAY</a>
+            </div>
+            <div class="nav">
+              <a href="#">USERFUL LINKS</a>
+              <a href="#">PARTNERS</a>
+            </div>
+            <div class="nav">
+              <a href="#">INSURANCE</a>
+              <a href="#">FAMILY TRAVEL</a>
+            </div>
+            <div class="contacts">
+              <span>CONTACT US&#58;</span>
+              <a href="tel: 1-800-234-5678">1-800-234-5678</a>
+              <a href="#"> info@demolink.org</a>
+            </div>
           </div>
         </div>
-        <a href="#top" title="To the top"></a>
-      </div>
-    </main>
-    <footer>
-      <div class="list">
-        <div class="nav">
-          <a href="#">FAQS PAGE</a>
-          <a href="#">PEOPLE SAY</a>
+        <div class="social">
+          <a href="https://twitter.com/" class="twitter" target="_blank"></a>
+          <a href="https://www.facebook.com/" class="facebook" target="_blank"></a>
+          <a href="https://plus.google.com/" class="google-plus" target="_blank"></a>
+          <a href="https://www.instagram.com/" class="instagram" target="_blank"></a>
+          <p>Journey &copy; 2013 | Privacy Policy | Website designed by TemplateMonster.com</p>
         </div>
-        <div class="nav">
-          <a href="#">USERFUL LINKS</a>
-          <a href="#">PARTNERS</a>
-        </div>
-        <div class="nav">
-          <a href="#">INSURANCE</a>
-          <a href="#">FAMILY TRAVEL</a>
-        </div>
-        <div class="nav contacts">
-          <span>CONTACT US&#58;</span>
-          <a href="tel: 1-800-234-5678">1-800-234-5678</a>
-          <a href="#"> info@demolink.org</a>
-        </div>
-      </div>
-      <div class="social">
-        <a href="https://twitter.com/" class="twitter" target="_blank"></a>
-        <a href="https://www.facebook.com/" class="facebook" target="_blank"></a>
-        <a href="https://plus.google.com/" class="google-plus" target="_blank"></a>
-        <a href="https://www.instagram.com/" class="instagram" target="_blank"></a>
-        <p>Journey &copy; 2013 | Privacy Policy | Website designed by TemplateMonster.com</p>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </div>
 </body>
 </html>
