add HW 10 and 11

--- a/module-10/index.html
+++ b/module-10/index.html
@@ -26,7 +26,7 @@
                     <a class="submenu__nav-link" href="#">AGENCY</a>
                   </li>
                   <li class="submenu__item">
-                    <a class="submenu-nav-link" href="#">NEWS</a>
+                    <a class="submenu__nav-link" href="#">NEWS</a>
                   </li>
                   <li class="submenu__item">
                     <a class="submenu__nav-link" href="#">TEAM</a>
