--- a/module-11/index.html
+++ b/module-11/index.html
@@ -19,17 +19,17 @@
               <a class="header__nav-menu-link" href="home.html">Home</a>
             </li>
             <li class="header__nav-menu-item">
-              <div class="header__submenu-wrapper">
+              <div class="submenu-wrapper">
                 <a class="header__nav-menu-link" href="about.html">About</a>
-                <ul class="header__submenu">
-                  <li class="header__submenu-item">
-                    <a class="header__submenu-link" href="#">AGENCY</a>
+                <ul class="submenu">
+                  <li class="submenu__item">
+                    <a class="submenu__nav-link" href="#">AGENCY</a>
                   </li>
-                  <li class="header__submenu-item">
-                    <a class="header__submenu-link" href="#">NEWS</a>
+                  <li class="submenu__item">
+                    <a class="submenu__nav-link" href="#">NEWS</a>
                   </li>
-                  <li class="header__submenu-item">
-                    <a class="header__submenu-link" href="#">TEAM</a>
+                  <li class="submenu__item">
+                    <a class="submenu__nav-link" href="#">TEAM</a>
                   </li>
                 </ul>
               </div>
